# fsleyes-widgets

./: .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.ci/: build_conda_dist.sh  build_dist.sh  build_doc.sh  build_pypi_dist.sh  check_version.sh  deploy_conda.sh  deploy_doc.sh  deploy_pypi.sh  patch_version.sh  setup_ssh.sh  test_template.sh
.conda/: meta.yaml
doc/: changelog.rst  conf.py  fsleyes_widgets.autotextctrl.rst  fsleyes_widgets.bitmapradio.rst  fsleyes_widgets.bitmaptoggle.rst  fsleyes_widgets.colourbutton.rst  fsleyes_widgets.dialog.rst  fsleyes_widgets.elistbox.rst  fsleyes_widgets.filepanel.rst  fsleyes_widgets.floatslider.rst  fsleyes_widgets.floatspin.rst  fsleyes_widgets.imagepanel.rst  fsleyes_widgets.notebook.rst  fsleyes_widgets.numberdialog.rst  fsleyes_widgets.placeholder_textctrl.rst  fsleyes_widgets.rangeslider.rst  fsleyes_widgets.rst  fsleyes_widgets.textpanel.rst  fsleyes_widgets.texttag.rst  fsleyes_widgets.togglepanel.rst  fsleyes_widgets.utils.b64icon.rst  fsleyes_widgets.utils.colourbarbitmap.rst  fsleyes_widgets.utils.layout.rst  fsleyes_widgets.utils.overlay.rst  fsleyes_widgets.utils.progress.rst  fsleyes_widgets.utils.rst  fsleyes_widgets.utils.runwindow.rst  fsleyes_widgets.utils.status.rst  fsleyes_widgets.utils.textbitmap.rst  fsleyes_widgets.utils.typedict.rst  fsleyes_widgets.utils.webpage.rst  fsleyes_widgets.widgetgrid.rst  fsleyes_widgets.widgetlist.rst  index.rst  mock_classes.txt  mock_modules.txt  pwidgets.autotextctrl.rst  pwidgets.bitmapradio.rst  pwidgets.bitmaptoggle.rst  pwidgets.colourbutton.rst  (+11 more)
fsleyes_widgets/: __init__.py  autotextctrl.py  bitmapradio.py  bitmaptoggle.py  colourbutton.py  dialog.py  elistbox.py  filepanel.py  floatslider.py  floatspin.py  imagepanel.py  notebook.py  numberdialog.py  (+7 more)
(+72 files in other folders)
